# beat-box

./: .gitignore  CMakeLists.txt  CMakePresets.json  imgui.ini  vcpkg.json
cmake/: deps.cmake
include/: camera.h  defines.hpp  math.hpp  shared.inl
patches/daxa-3.6/: README.md  local-changes.patch
src/: acceleration_structure_manager.cpp  acceleration_structure_manager.hpp  camera.h  camera_manager.hpp  defines.hpp  gpu_context.hpp  gui_manager.cpp  gui_manager.hpp  image.cpp  image.hpp  image_manager.cpp  image_manager.hpp  input_manager.cpp  input_manager.hpp  main.cpp  pipeline_manager.hpp  ray_tracing_SBT.hpp  ray_tracing_pipeline.hpp  ray_tracing_task_graph.hpp  renderer_manager.cpp  renderer_manager.hpp  rigid_body_manager.cpp  rigid_body_manager.hpp  scene_manager.hpp  status_manager.hpp  task_manager.hpp  window.hpp  window_manager.hpp
src/shaders/: AS_mngr.slang  GUI.slang  RB_sim.slang  collision_detection.slang  extensions.slang  ray_tracing.slang  solvers.slang
src/shaders/path_tracing/: lighting.slang  ray_tracing.slang
src/shaders/simulation/: LBVH.slang  RB_sim.slang  avbd.slang  collision_detection.slang  coloring.slang  island.slang  islands.slang  solvers.slang
